# PrivacyComputingCourse

./: .gitignore  README.md
Lecture2_RPC/: README.md
Lecture2_RPC/gRPC/: client.cpp  environment.sh
Lecture2_RPC/gRPC/proto/: payment.proto
Lecture2_RPC/grpc/: .gitignore  client.cpp  server.cpp
Lecture2_RPC/grpc/proto/: payment.grpc.pb.cc  payment.grpc.pb.h  payment.pb.cc  payment.pb.h
Lecture2_RPC/more_grpc/: CMakeLists.txt  client.cpp  environment.sh  server.cpp
Lecture2_RPC/more_grpc/proto/: payment.proto
Lecture2_RPC/socket/: CMakeLists.txt  client.cpp  server.cpp
Lecture3_CRYPTO/: README.md
Lecture3_CRYPTO/aes/: CMakeLists.txt
Lecture3_CRYPTO/aes/src/: client.cpp  server.cpp
Lecture3_CRYPTO/aes/src/proto/: DiffieHellman.proto
Lecture3_CRYPTO/aes/src/utils/: AES.cpp  AES.h
Lecture3_CRYPTO/caesar/: .gitignore  CMakeLists.txt  caesar.cpp  decipher.cpp
Lecture3_CRYPTO/diffie_hellman/: .gitignore  CMakeLists.txt  client.cpp  server.cpp  util.hpp
Lecture3_CRYPTO/diffie_hellman/proto/: DiffieHellman.proto
Lecture4_HE/: README.md
Lecture4_HE/asymmetric/: CMakeLists.txt
Lecture4_HE/asymmetric/configuration/: ip.txt
Lecture4_HE/asymmetric/scripts/: Alice.sh  Bob.sh  Tom.sh  compile.sh
Lecture4_HE/asymmetric/src/: DataHolder.cpp  QueryUser.cpp
Lecture4_HE/asymmetric/src/proto/: FedSql.proto
Lecture4_HE/asymmetric/src/utils/: BenchLogger.hpp  DataType.hpp  util.hpp
Lecture4_HE/asymmetric_fsa/: CMakeLists.txt
Lecture4_HE/asymmetric_fsa/scripts/: Alice.sh  Bob.sh  Tom.sh  compile.sh
Lecture4_HE/asymmetric_fsa/src/: DataHolder.cpp  QueryUser.cpp
Lecture4_HE/asymmetric_fsa/src/proto/: FedSql.proto
Lecture4_HE/asymmetric_fsa/src/utils/: DataType.hpp
Lecture4_HE/asymmetric_psa/: CMakeLists.txt  environment.sh
Lecture4_HE/asymmetric_psa/scripts/: Bob.sh
Lecture4_HE/asymmetric_psa/src/: DataHolder.cpp  QueryUser.cpp
Lecture4_HE/asymmetric_psa/src/proto/: FedSql.proto
lecture2_RPC/socket/: CMakeLists.txt  client.cpp  server.cpp
